--- a/styles/index.css
+++ b/styles/index.css
@@ -349,8 +349,7 @@ nav a span {
 
 .section_about .opening {
     width: 20%;
-    width: 20%;
-    text-align: center;
+    text-align: left;
     line-height: 1.5;
 }
 
@@ -359,6 +358,7 @@ nav a span {
 }
 
 /* end about */
+
 /* start footer */
 footer {
     text-align: center;
@@ -366,6 +366,24 @@ footer {
 
 footer p {
     margin: 20px;
+}
+
+footer svg {
+    fill: white;
+}
+
+.ast-arrow-svg {
+    display: none;
+    background-color: #94a3b8;
+    transform: translate(0, -20%) rotate(180deg);
+    position: fixed;
+    cursor: pointer;
+    z-index: 99;
+    bottom: 20px;
+    right: 30px;
+    width: 35px;
+    height: 30px;
+
 }
 
 /* end footer */
