--- a/styles/index.css
+++ b/styles/index.css
@@ -557,3 +557,58 @@ footer svg {
 }
 
 /*end kitchen page */
+/* start cart */
+.products{ 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 15px auto;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0,.5);
+    padding: 30px 10px;
+    row-gap: 5px;
+}
+.cart {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 16px;
+    max-width: 300px;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .product-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 12px;
+  }
+
+  .product-name {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+
+  .product-cost {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 12px;
+  }
+
+  .add-to-cart-button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s;
+  }
+
+  .add-to-cart-button:hover {
+    background-color: #45a049;
+  }
+/* end cart */
