- replace fontawesome icon classes with SVG - remove awesome fonts icons

--- a/styles/index.css
+++ b/styles/index.css
@@ -40,8 +40,8 @@
 }
 
 .downeffect:hover {
-    height:100%;
-    padding-top:50%;
+    height: 100%;
+    padding-top: 50%;
 }
 
 .leftfirstheader {
@@ -53,6 +53,7 @@
     margin-left: 5px;
     color: black;
 }
+
 /* end first header */
 
 /* start second header */
@@ -85,6 +86,7 @@ nav .nav {
     justify-content: center;
     text-align: center;
 }
+
 /* end second header */
 
 /* start first container */
@@ -200,12 +202,10 @@ nav .nav {
 
 .t_container .f_div {
     width: 220px;
-    border: 1px solid red;
 }
 
 .t_container .s_div {
     width: 40vw;
-    border: 1px solid green;
 }
 
 .t_container .s_div h1 {
@@ -279,12 +279,13 @@ nav .nav {
 
 .commu_container a {
     text-decoration: none;
-    /* width: 10%; */
 }
 
-.commu_container a:hover {
+.commu_container a:hover,
+.commu_container a:hover svg {
     color: var(--second-color);
     font-size: 20px;
+    fill: rgb(226, 228, 52);
 }
 
 /* end communication container */
