--- a/styles/index.css
+++ b/styles/index.css
@@ -502,3 +502,75 @@ footer svg {
 }
 
 /* end cart */
+
+
+
+
+
+/* ////////////////////////////////////// Login and Register //////////////////////////////////////*/
+body {
+    font-family: Arial, sans-serif;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    align-items: center;
+    justify-content: center;
+}
+
+.popup {
+    background-color:#658effc2;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.close-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 10;
+}
+
+.toggle-btn {
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+    margin-top: auto;
+    padding-top: 10px ;
+}
+
+.btn {
+    background-color: #004080;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background-color: #004da0;
+}
+
+.input {
+    width: 90%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
