--- a/styles/index.css
+++ b/styles/index.css
@@ -544,6 +544,8 @@ body {
     top: 10px;
     right: 10px;
     z-index: 10;
+    background-color: #3399ff;
+    padding: 5px 10px;
 }
 
 .toggle-btn {
