--- a/styles/index.css
+++ b/styles/index.css
@@ -43,11 +43,6 @@
     position: relative;
 }
 
-/* .downeffect:hover {
-    height: 100%;
-    padding-top: 50%;
-} */
-
 #notif {
     width: 20px;
     height: 20px;
@@ -556,7 +551,7 @@ footer svg {
 
 .btn {
     /* background-color: #004080; */
-    background-image: linear-gradient(to right,#b3d9ff, #3399ff );
+    background-image: linear-gradient(to right, #b3d9ff, #3399ff);
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -567,7 +562,7 @@ footer svg {
 
 .btn:hover {
     /* background-color: #004da0; */
-    background-image: linear-gradient(to right , #3399ff ,#b3d9ff);
+    background-image: linear-gradient(to right, #3399ff, #b3d9ff);
 
 }
 
@@ -612,14 +607,19 @@ start view in screens less than 600px
     }
 
     .firstheader>*:nth-child(1) img {
-        width: 100%;
-        height: 100%;
+        width: 70%;
+        height: 70%;
     }
 
     .slogan {
         display: flex;
         flex-flow: column wrap;
         align-items: center;
+        font-size: 6vw;
+        width: 99vw;
+    }
+
+    .slogan * {
         font-size: 6vw;
     }
 
@@ -861,7 +861,7 @@ start view in screens less than 600px
         align-items: center;
     }
 
-    .section_about .how ul,
+    .section_about .how ul h1,
     .section_about .about ul h1,
     .section_about .opening ul h1 {
         font-size: 8vw;
@@ -880,16 +880,16 @@ start view in screens less than 600px
     /* end section_about */
 
     /* start footer */
-    footer p{
+    footer p {
         font-size: 4vw;
     }
+
     /* end footer */
 
 
 }
 
 /* end view in screens less than 600px */
-.overlay h2{
+.overlay h2 {
     color: white;
 }
-
