--- a/styles/index.css
+++ b/styles/index.css
@@ -721,6 +721,7 @@ footer svg {
     z-index: 10;
     background-color: #3399ff;
     padding: 5px 10px;
+    margin-top: 40px;
 }
 
 .toggle-btn {
