--- a/styles/index.css
+++ b/styles/index.css
@@ -697,6 +697,7 @@ footer svg {
     background: rgba(0, 0, 0, 0.7);
     align-items: center;
     justify-content: center;
+    z-index: 1000000;
 }
 
 .popup {
@@ -710,6 +711,7 @@ footer svg {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 1000000;
 
 }
 
