--- a/styles/index.css
+++ b/styles/index.css
@@ -720,7 +720,7 @@ footer svg {
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 10;
+    z-index: 1000000000;
     background-color: #3399ff;
     padding: 5px 10px;
     margin-top: 40px;
